fixes problem where an invalid line item could be entered as long as there was one valid line item

--- a/Purchasing.Web/Views/Order/_Options.cshtml
+++ b/Purchasing.Web/Views/Order/_Options.cshtml
@@ -39,6 +39,7 @@ Messages: {
         OrderSplitWithNoAccount: '@Resources.Order_Error_OrderSplitWithNoAccount',
         TotalAmountRequired: '@Resources.Order_Error_TotalAmountRequired',
         LineSplitNoAccount: '@Resources.Order_Error_LineSplitNoAccount',
-        LineSplitTotalAmountRequired: '@Resources.Order_Error_LineSplitTotalAmountRequired'
+        LineSplitTotalAmountRequired: '@Resources.Order_Error_LineSplitTotalAmountRequired',
+        InvalidLineItemDetected: '@Resources.Order_Error_LineItem'
     }
 });
