--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -53,7 +53,6 @@
 		
 		span.ui-button-text { font-size: 15px; }
 
-        #stats { font-size: 20px;}
 		
 		.browser { background-image: url('@Url.Content("~/Images/browser_logos-32.png")');width: 32px;height: 32px;display: inline-block;}
 		.chrome { background-position: 0px 0px; }
@@ -213,13 +212,12 @@
 			                Current PrePurchasing statistics as of <span id="stats-updated">@DateTime.Now.ToShortTimeString()</span>
 			            </span>
 			            <div>
-			                <span><strong id="stats-total-orders">n</strong> total orders placed with <strong id="stats-attachments">n</strong> attached files totaling <strong id="stats-total-amount">$$$</strong> and using <strong id="stats-accounts">n</strong> different accounts.</span>
-			                <span>Of these </span><strong id="stats-total-orders-completed">n</strong><span> are completed for </span><strong id="stats-total-amount-completed"></strong><span>.</span>
+			                <h4><strong id="stats-total-orders">n</strong> total orders placed with <strong id="stats-attachments">n</strong> attached files totaling <strong id="stats-total-amount">$$$</strong> and using <strong id="stats-accounts">n</strong> different accounts. Of these <strong id="stats-total-orders-completed">n</strong> are completed for <strong id="stats-total-amount-completed"></strong>.</h4>
 			            </div>
 			            <div>
-			                <span>There are <strong id="stats-active-users">n</strong> active users having acted <strong id="stats-actions">n</strong> times across <strong id="stats-workgroups">n</strong> workgroups.</span>
+			                <h4>There are <strong id="stats-active-users">n</strong> active users having acted <strong id="stats-actions">n</strong> times across <strong id="stats-workgroups">n</strong> workgroups.</h4>
 			            </div>
-                        <div><span>There are <strong id="stats-orgs">n</strong> different primary organizations that have placed orders and <strong id="stats-associated-orgs">n</strong> different organizations that have workgroups associated with them.</span></div>
+                        <div><h4>There are <strong id="stats-orgs">n</strong> different primary organizations that have placed orders and <strong id="stats-associated-orgs">n</strong> different organizations that have workgroups associated with them.</h4></div>
 			        </div>
 			    </div>
 
