Added 2 new fields to core order page
RequestType and Business Purpose are now in the db/class/mapping and can
be created/edited on the order page

--- a/Purchasing.Web/Views/Order/_OrderForm.cshtml
+++ b/Purchasing.Web/Views/Order/_OrderForm.cshtml
@@ -13,7 +13,9 @@
     }
 </select>
 @Html.Partial("_Justification")
-    
+
+@Html.Partial("_BusinessPurpose")    
+
 @Html.Partial("_Vendor")
     
 @Html.Partial("_ShippingAddress")
