requestType hooked through column prefs
SQL updated and indexes updated, though nothing new is searchable yet

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -55,7 +55,7 @@
             
         }
     }
-
+    
     if(Model.ColumnPreferences.ShowPurchaseOrderNumber)
     {
         if(tableHeader)
@@ -77,6 +77,18 @@
         else
         {
             result.Append("<td>" + @Html.Encode(item.ReferenceNumber) + "</td>");
+        }
+    }
+    
+    if (Model.ColumnPreferences.ShowRequestType)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Request Type</th>");
+        }
+        else
+        {
+            result.Append("<td>" + @Html.Encode(item.RequestType) + "</td>");
         }
     }
 
