--- a/Purchasing.Web/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Web/Views/User/ColumnPreferences.cshtml
@@ -36,6 +36,15 @@
                 </li>
                 <li>
                     <div class="editor-label">
+                        @Html.LabelFor(model => model.ShowRequestType) 
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.ShowRequestType)
+                        @Html.ValidationMessageFor(model => model.ShowRequestType)
+                    </div>
+                </li>
+                <li>
+                    <div class="editor-label">
                         @Html.LabelFor(model => model.ShowWorkgroup) 
                     </div>
                     <div class="editor-field">
