--- a/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
+++ b/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
@@ -15,7 +15,7 @@
             <li>
                 <div class="editor-label required">Request Type</div>
                 <div class="editor-field">
-                    @this.Select("requestType").Options(new [] { "Purchasing", "Travel or Entertainment" }).Class("request-types").Selected(Model.Order.RequestType ?? "Purchasing")
+                    @this.Select("requestType").Options(new [] { "Purchasing", "Payment/Refund", "Travel or Entertainment", "PCARD Receipt", "Other" }).Class("request-types").Selected(Model.Order.RequestType ?? "Purchasing")
                 </div>
             </li>
             <li>
