tags now show up in the order history table

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -80,6 +80,18 @@
         }
     }
     
+    if (Model.ColumnPreferences.ShowTag)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Tag</th>");
+        }
+        else
+        {
+            result.Append("<td>" + @Html.Encode(item.Tag) + "</td>");
+        }
+    }
+    
     if (Model.ColumnPreferences.ShowRequestType)
     {
         if (tableHeader)
