Don't use a fake user to clear out the assigned ap user

--- a/Purchasing.Web/Views/Order/AssignAccountsPayableUser.cshtml
+++ b/Purchasing.Web/Views/Order/AssignAccountsPayableUser.cshtml
@@ -48,8 +48,8 @@
                 <div class="editor-label required">
                     <label>Accounts Payable User to (Re)Route to:</label><span>*</span>
                 </div>
-                <div class="editor-field">                                      
-                    @this.Select("ApUserId").Options(Model.PurchaserPeeps, x => x.Id, x => x.FullName).Selected("--Select Accounts Payable User--").Class("chzn-select")                    
+                <div class="editor-field">
+                    @this.Select("ApUserId").Options(Model.PurchaserPeeps, x=>x.Id, x=>x.FullName).Selected(null).FirstOption("-- Clear --").Class("chzn-select")
                 </div>
             </li>
             <li>				
