Added a tour to the new fields. Also added so ids to the pages so the highlight section of the tour is consistent.

--- a/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
+++ b/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrderModifyModel
 
-<section>
+<section id="business-purpose-section">
     <header class="ui-widget-header ui-corner-top">Business Purpose</header>
 
     <div class="section-contents">
