--- a/Purchasing.Web/Views/Order/_Justification.cshtml
+++ b/Purchasing.Web/Views/Order/_Justification.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrderModifyModel
 
-<section>
+<section id="justification-section">
     <header class="ui-widget-header ui-corner-top">Justification</header>
 
     <div class="section-contents">
