--- a/Purchasing.Web/Views/Search/Results.cshtml
+++ b/Purchasing.Web/Views/Search/Results.cshtml
@@ -74,6 +74,10 @@
                         <em>@order.Justification</em>. To be delivered to 
                         @order.DeliverTo (email: @(string.IsNullOrWhiteSpace(order.DeliverToEmail) ? "N/A" : order.DeliverToEmail))
                     </p>
+                    @if (!string.IsNullOrWhiteSpace(order.BusinessPurpose) && order.BusinessPurpose.ToLower().Contains(Model.Query.ToLower()))
+                    {
+                        <p>Business Purpose: <em>@order.BusinessPurpose</em></p>
+                    }
                     @if(order.PoNumber != null && order.PoNumber.ToLower() == Model.Query.ToLower())
                     {
                         <p>PO Number: <em>@order.PoNumber</em></p>
@@ -81,6 +85,10 @@
                     @if (order.ReferenceNumber != null && order.ReferenceNumber.ToLower() == Model.Query.ToLower())
                     {
                         <p>Ref Number: <em>@order.ReferenceNumber</em></p>
+                    }
+                    @if (order.Tag != null && order.Tag.ToLower() == Model.Query.ToLower())
+                    {
+                        <p>Tag: <em>@order.Tag</em></p>
                     }
                 </li>
             }
