disable button if not assigned

--- a/Purchasing.Web/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Web/Views/Order/ReceiveItems.cshtml
@@ -334,7 +334,7 @@
 
                 <li class="apply">
                     <label>&nbsp;</label>
-			        <input class="button" type="submit" value="@allButtoneName" />
+			        <input class="button" type="submit" value="@allButtoneName" @disabled />
                 </li>
             </ul>
         }
