Updated description text, added a method to test the exception handling

--- a/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
+++ b/Purchasing.Web/Views/Order/_BusinessPurpose.cshtml
@@ -7,7 +7,7 @@
         
         <div class="section-text">
             <p>
-                Please enter your business purpose for placing this order request.
+                Optional: Please enter your business purpose for placing this order request.
             </p>    
         </div>
 
