Changed the VendorAddress Guid to a string. Updated related guids to string where the repository was injected. Updated some DaFis text to KFS

--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -88,7 +88,7 @@
                             <div class="fn">@Model.Vendor.Name
                                 @if (!string.IsNullOrEmpty(Model.Vendor.VendorId))
                                 {
-                                    <span>@string.Format("(DaFis Id: {0})", Model.Vendor.VendorId)</span>
+                                    <span>@string.Format("(KFS Id: {0})", Model.Vendor.VendorId)</span>
                                 }
                             </div>
                             <div class="adr">
